drivers/misc: Added Gamma control (RGB Colors) [cyanogenmod]

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -827,6 +827,13 @@ config DESKDOCK_DISABLE
 	default n
 	help
 	  This option enable not support for DESKDOCK
+	  
+config GAMMA_CONTROL
+       bool "Gamma Control for OLED"
+       depends on FB_MSM_MIPI_DSI_SAMSUNG_OCTA
+       default y
+       help
+       This adds full support for shifting RGB panel colors.
 
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
