--- a/arch/arm/configs/imperium_defconfig
+++ b/arch/arm/configs/imperium_defconfig
@@ -59,6 +59,8 @@ CONFIG_DEFAULT_CUBIC=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
 CONFIG_INTELLI_THERMAL=y
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_HAS_MACH_MEMUTILS=y
+
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
 CONFIG_SYSVIPC=y
