--- a/arch/arm/configs/imperium_defconfig
+++ b/arch/arm/configs/imperium_defconfig
@@ -185,6 +185,9 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIMM is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_YANKACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_OPTIMAX is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PRESERVATIVE is not set
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -206,6 +209,9 @@ CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_WHEATLEY=y
 CONFIG_CPU_FREQ_GOV_INTELLIMM=y
 CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_OPTIMAX=y
+CONFIG_CPU_FREQ_GOV_PRESERVATIVE=y
 CONFIG_INTELLI_PLUG=y
 CONFIG_CPU_IDLE=y
 CONFIG_SEC_DVFS=y
