--- a/arch/arm/configs/imperium_defconfig
+++ b/arch/arm/configs/imperium_defconfig
@@ -18,6 +18,7 @@ CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_FIFO=y
 CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_IOSCHED_NOOP=y
 # CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_BFQ is not set
@@ -28,6 +29,7 @@ CONFIG_IOSCHED_NOOP=y
 # CONFIG_DEFAULT_VR is not set
 # CONFIG_DEFAULT_FIFO is not set
 # CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_TRIPNDROID is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_CFQ=y
 CONFIG_DEFAULT_IOSCHED="cfq"
