--- a/arch/arm/configs/imperium_defconfig
+++ b/arch/arm/configs/imperium_defconfig
@@ -806,12 +806,12 @@ CONFIG_GENLOCK_MISCDEVICE=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_SAMSUNG_JACK=y
 CONFIG_SEC_MISC=y
-CONFIG_SEC_DEBUG=y
-CONFIG_SEC_DEBUG_SCHED_LOG=y
-CONFIG_SEC_DEBUG_AVC_LOG=y
-CONFIG_SEC_DEBUG_IRQ_EXIT_LOG=y
-CONFIG_SEC_DEBUG_SUBSYS=y
-CONFIG_SEC_DEBUG_MDM_FILE_INFO=y
+# CONFIG_SEC_DEBUG is not set
+# CONFIG_SEC_DEBUG_SCHED_LOG is not set
+# CONFIG_SEC_DEBUG_AVC_LOG is not set
+# CONFIG_SEC_DEBUG_IRQ_EXIT_LOG is not set
+# CONFIG_SEC_DEBUG_SUBSYS is not set
+# CONFIG_SEC_DEBUG_MDM_FILE_INFO is not set
 CONFIG_SCHED_TRACER=y
 CONFIG_MFD_MAX77693=y
 CONFIG_IR_REMOCON_FPGA=y
@@ -861,7 +861,7 @@ CONFIG_KEYS_DEBUG_PROC_KEYS=y
 # CONFIG_SEC_RESTRICT_ROOTING_LOG is not set
 
 # Fork hang detection
-CONFIG_SEC_FORKHANG_DEBUG=y
+# CONFIG_SEC_FORKHANG_DEBUG is not set
 
 CONFIG_SEC_GPIO_DVS=y
 
@@ -884,7 +884,6 @@ CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_MSM_RTB=y
 
 CONFIG_DEBUG_LIST=y
-#jh43.jung  FIPS Cerified code merge - start
 CONFIG_CRYPTO_TEST=y
 #CONFIG_CRYPTO_FIPS_INTEG_COPY_ADDRESS=0x8A008000
 CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=n
@@ -892,7 +891,6 @@ CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRYPTO_FIPS=y
 CONFIG_CRYPTO_SHA512=y
 CONFIG_LOG_BUF_SHIFT=18
-#jh43.jung  FIPS Cerified code merge - end
 
 # SSWAP
 CONFIG_SWAP=y
