--- a/arch/arm/configs/imperium_defconfig
+++ b/arch/arm/configs/imperium_defconfig
@@ -558,7 +558,7 @@ CONFIG_MSM_KGSL_PAGE_TABLE_COUNT=24
 CONFIG_MSM_KGSL_KERNEL_API_ENABLE=y
 CONFIG_FB=y
 CONFIG_FB_VIRTUAL=y
-CONFIG_SEC_DEBUG_MDP=y
+# CONFIG_SEC_DEBUG_MDP is not set
 CONFIG_FB_MSM=y
 CONFIG_USE_VFB=y
 # CONFIG_FB_MSM_BACKLIGHT is not set
