--- a/arch/arm/configs/imperium_defconfig
+++ b/arch/arm/configs/imperium_defconfig
@@ -190,6 +190,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_OPTIMAX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PRESERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASSH3 is not set
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -214,6 +215,7 @@ CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_CPU_FREQ_GOV_OPTIMAX=y
 CONFIG_CPU_FREQ_GOV_PRESERVATIVE=y
+CONFIG_CPU_FREQ_GOV_SMARTASSH3=y
 CONFIG_INTELLI_PLUG=y
 CONFIG_CPU_IDLE=y
 CONFIG_SEC_DVFS=y
