--- a/arch/arm/configs/imperium_defconfig
+++ b/arch/arm/configs/imperium_defconfig
@@ -848,6 +848,8 @@ CONFIG_MSM_HSIC_GPIO_REV06=y
 #
 CONFIG_CRYPTO=y
 CONFIG_CRYPTO_SHA1=y
+CONFIG_CRYPTO_SHA1_ARM=y
+CONFIG_CRYPTO_SHA1_ARM_NEON=y
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_AES=y
 CONFIG_CRYPTO_CBC=y
