Enabled SHA1_ARM and SHA_ARM_NEON

--- a/arch/arm/configs/imperium_defconfig
+++ b/arch/arm/configs/imperium_defconfig
@@ -62,6 +62,7 @@ CONFIG_DEFAULT_TCP_CONG="cubic"
 CONFIG_INTELLI_THERMAL=y
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 CONFIG_HAS_MACH_MEMUTILS=y
+CONFIG_CC_GRAPHITE_OPTIMIZATION=y
 
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
