--- a/arch/arm/configs/imperium_defconfig
+++ b/arch/arm/configs/imperium_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Imperium_LL_Kernel-v1.8-beta1"
+CONFIG_LOCALVERSION="-Imperium_LL_Kernel-v1.9"
 # CONFIG_LOCALVERSION_AUTO is not set
 
 # CONFIG_HAVE_END_MEM is not set
