--- a/drivers/video/msm/mhl_v2/sii8240/Makefile
+++ b/drivers/video/msm/mhl_v2/sii8240/Makefile
@@ -3,5 +3,6 @@
 # Copyright (c) 2010 Samsung Electronics Co., Ltd.
 #	http://www.samsung.com/
 
+EXTRA_CFLAGS += -Wno-switch-bool
 
 obj-$(CONFIG_SAMSUNG_MHL_8240) += sii8240.o \
