--- a/arch/arm/configs/imperium_defconfig
+++ b/arch/arm/configs/imperium_defconfig
@@ -196,7 +196,14 @@ CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
 CONFIG_VMALLOC_RESERVE=0x19000000
 CONFIG_COMPACTION=y
+CONFIG_ALIGNMENT_TRAP=y
+# CONFIG_UACCESS_WITH_MEMCPY is not set
+CONFIG_ARM_PLD_64BYTE=y
+CONFIG_USE_LDRDSTRD_OVER_LDMSTM=y
+# CONFIG_SECCOMP is not set
 CONFIG_CC_STACKPROTECTOR=y
+# CONFIG_DEPRECATED_PARAM_STRUCT is not set
+# CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART is not set
 CONFIG_CP_ACCESS=y
 CONFIG_CPU_FREQ=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
