--- a/arch/arm/configs/imperium_defconfig
+++ b/arch/arm/configs/imperium_defconfig
@@ -260,6 +260,7 @@ CONFIG_INTELLI_PLUG=y
 CONFIG_CPU_IDLE=y
 CONFIG_SEC_DVFS=y
 CONFIG_VFP=y
+CONFIG_VFPv3=y
 CONFIG_NEON=y
 CONFIG_KERNEL_MODE_NEON=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
