minor changes in compressed Makefile

--- a/arch/arm/boot/compressed/Makefile
+++ b/arch/arm/boot/compressed/Makefile
@@ -22,7 +22,7 @@ OBJS		+= sdhi-shmobile.o
 OBJS		+= sdhi-sh7372.o
 endif
 
-AFLAGS_head.o += -DTEXT_OFFSET=$(TEXT_OFFSET)
+AFLAGS_head.o := -DTEXT_OFFSET=$(TEXT_OFFSET)
 AFLAGS_head.o += -Wa,-march=armv7-a$(plus_sec)
 AFLAGS_head.o += -Wa,-mcpu=cortex-a15
 # change@wtl.rsengott
@@ -30,13 +30,13 @@ AFLAGS_head.o += -Wa,-mcpu=cortex-a15
 ifeq ($(CONFIG_CRYPTO_FIPS_OLD_INTEGRITY_CHECK),y)
 AFLAGS_head.o += -DFIPS_KERNEL_RAM_BASE=0x80208000
 endif
-HEAD	= head.o
 AFLAGS_misc.o += -Wa,-march=armv7-a$(plus_sec)
 AFLAGS_misc.o += -Wa,-mcpu=cortex-a15
-MISC	+= misc.o
-
 AFLAGS_decompress.o += -Wa,-march=armv7-a$(plus_sec)
 AFLAGS_decompress.o += -Wa,-mcpu=cortex-a15
+HEAD	= head.o
+MISC	+= misc.o
+CFLAGS_decompress.o := -Os
 DECOMPRESS = decompress.o
 FONTC	= $(srctree)/drivers/video/console/font_acorn_8x8.c
 
