Added ArterActive CPU GOV [credits to @arter97]

--- a/arch/arm/configs/imperium_defconfig
+++ b/arch/arm/configs/imperium_defconfig
@@ -209,6 +209,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PRESERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASSH3 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BARRY_ALLEN is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ARTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -235,6 +236,7 @@ CONFIG_CPU_FREQ_GOV_OPTIMAX=y
 CONFIG_CPU_FREQ_GOV_PRESERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SMARTASSH3=y
 CONFIG_CPU_FREQ_GOV_BARRY_ALLEN=y
+CONFIG_CPU_FREQ_GOV_ARTERACTIVE=y
 CONFIG_INTELLI_PLUG=y
 CONFIG_CPU_IDLE=y
 CONFIG_SEC_DVFS=y
