--- a/ramfs_imperium/init.rc
+++ b/ramfs_imperium/init.rc
@@ -14,6 +14,7 @@ import /init.carrier.rc
 on early-init
     # Set init and its forked children's oom_adj.
     write /proc/1/oom_score_adj -1000
+    write /proc/1/oom_adj -16
 
     # Apply strict SELinux checking of PROT_EXEC on mmap/mprotect calls.
     write /sys/fs/selinux/checkreqprot 0
