--- a/arch/arm/lib/Makefile
+++ b/arch/arm/lib/Makefile
@@ -7,7 +7,7 @@
 lib-y		:= backtrace.o changebit.o csumipv6.o csumpartial.o   \
 		   csumpartialcopy.o csumpartialcopyuser.o clearbit.o \
 		   delay.o findbit.o memchr.o                         \
-		   memset.o memzero.o setbit.o                        \
+		   memset.o memcmp.o memzero.o setbit.o               \
 		   strncpy_from_user.o strnlen_user.o                 \
 		   strchr.o strrchr.o strcmp.o                        \
 		   testchangebit.o testclearbit.o testsetbit.o        \
