--- a/arch/arm/configs/imperium_defconfig
+++ b/arch/arm/configs/imperium_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Imperium_LL_Kernel-v2.5"
+CONFIG_LOCALVERSION="-Imperium_LL_Kernel-v2.5a"
 # CONFIG_LOCALVERSION_AUTO is not set
 
 # CONFIG_HAVE_END_MEM is not set
