power: quickwakeup: initial driver

--- a/arch/arm/configs/imperium_defconfig
+++ b/arch/arm/configs/imperium_defconfig
@@ -63,6 +63,7 @@ CONFIG_INTELLI_THERMAL=y
 CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
 CONFIG_HAS_MACH_MEMUTILS=y
 CONFIG_CC_GRAPHITE_OPTIMIZATION=y
+CONFIG_QUICK_WAKEUP=y
 
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_STAT_FS=y
