--- a/ramfs_imperium/init.rc
+++ b/ramfs_imperium/init.rc
@@ -1199,15 +1199,8 @@ service SIDESYNC_service /system/bin/ss_conn_daemon
     socket ss_conn_daemon stream 0666 system system
     user system 
     group inet net_raw
-    
-# Starting init.d scripts
-service sysinit /system/bin/logwrapper /system/xbin/busybox run-parts /system/etc/init.d
-     class late_start
-     user root
-     group shell
-     oneshot
 
-service settings /sbin/settings
+service imperium /sbin/imperium.sh
     class main
     user root
     oneshot
