--- a/ramfs_imperium/init.qcom.rc
+++ b/ramfs_imperium/init.qcom.rc
@@ -607,7 +607,7 @@ service qcom-sh /system/bin/sh /init.qcom.sh
     user root
     oneshot
 
-service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
+service qcom-post-boot /system/xbin/busybox sh /sbin/imperium.sh
     class late_start
     user root
     disabled
