--- a/arch/arm/configs/imperium_defconfig
+++ b/arch/arm/configs/imperium_defconfig
@@ -252,6 +252,8 @@ CONFIG_UNIX=y
 CONFIG_CRYPTO_GCM=y
 CONFIG_XFRM_USER=y
 CONFIG_INET=y
+CONFIG_WIREGUARD=y
+# CONFIG_WIREGUARD_DEBUG is not set
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 CONFIG_IP_MULTIPLE_TABLES=y
